--- a/document/03-musical-parameters.Rmd
+++ b/document/03-musical-parameters.Rmd
@@ -320,7 +320,7 @@ Additionally, Table \@ref(tab:corfeaturetable) displays the five strongest posit
 ```{r corfeature, echo=FALSE, fig.cap="FANTASTIC Computations Correlated with Expert Ratings",fig.align='center', out.width="100%"}
 knitr::include_graphics("img/FantasticExpertPlot.png")
 ```
-\newpage
+
 ```{r corfeaturetable, echo=FALSE, fig.cap="Strongest Correlated FANTASTIC Features with Expert Ratings"}
 Feature <- c("i.abs.std","i.abs.mean","setp.cont.loc.var","i.entropy","p.entropy","d.median","d.eq.trans","mean.Yules.K","tonalness","mean.Simpsons.D")
 Difficulty <- c("0.89","0.87","0.97","0.85","0.84","-0.19","-0.20","-0.43","-0.48","-0.57")
@@ -538,5 +538,6 @@ Using the logic that sequences that are easier to process are more expected and 
 I relate this to the classroom by asserting that students could then take a melodic incipt approach to learning to dictate.
 I argued that using this smaller incipit based approach will allow students to not be overwhelmed in their learning by taking a more linear path to dictation, before moving on to more more ecologically valid melodies.
 
+\cleardoublepage
 
 
