--- a/document/latex/before_body.tex
+++ b/document/latex/before_body.tex
@@ -1,6 +1,7 @@
-%\newpage\thispagestyle{empty}
+%\newpage
+\thispagestyle{empty}
 \begin{center}
-  MODELING MELODIC DICTATION\\
+MODELING MELODIC DICTATION\\
 \end{center}
 
 \begin{center}
@@ -36,7 +37,7 @@ August 2019\\
 % Copyright
 \newpage
 
-\thispagestyle{empty}
+\thispagestyle{plain}
 
 © 2019 copyright
 
@@ -44,23 +45,26 @@ David John Baker
 
 All rights reserved
 
-\cleardoublepage\newpage %%% KILL
-\newpage
+%\cleardoublepage\newpage %%% KILL
+%\newpage
 
+\let\cleardoublepage\clearpage
 % Dedication
 %% REMOVE DOUBLE COMMENTS FOR PRINTING
-%%\thispagestyle{empty}
-%%\chapter{Dedication}
+\pagestyle{empty}
+\chapter{Dedication}
 
-%%This dissertation is dedicated to my parents.
-%%Thank you for valuing education.
-%%Thank you for fostering my growth in every way possible.
-%%As a result, you've opened my eyes to the world.
+This dissertation is dedicated to my parents.
+Thank you for valuing education.
+Thank you for fostering my growth in every way possible.
+As a result, you've opened my eyes to the world.
 
+\let\cleardoublepage\clearpage
 %\setlength{\abovedisplayskip}{-5pt}
 %\setlength{\abovedisplayshortskip}{-5pt}
 
 % Acknowledgements
+\pagestyle{plain}
 \chapter{Acknowledgements}
 
 This dissertation would not have been possible without the support of a large community people over the past four years.
@@ -77,3 +81,5 @@ Without a commitment to free and open source software, this research and dissert
 
 Lastly, I want to thank all of my friends and family.
 Thank you to Will, Rory, Kevin, Amanda, Ryan, Chris, Peter, Jono, Kris, Sarah, Phil (also for the melodies!), Owen, Jacob, Michael, Adam, Mark, Sasha, Lauryn, Connor, Elizabeth, Tanush, Tony, Andrew, Anthony, Savanna, Jared, Matt, Andrew, Erin, Lizbeth, Greg, my parents John and Mary, and especially Evelyn for all your support and love.
+
+\let\cleardoublepage\clearpage
