--- a/document/latex/preamble.tex
+++ b/document/latex/preamble.tex
@@ -1,23 +1,52 @@
 \usepackage{booktabs}
 \usepackage{amsthm}
 \usepackage{setspace}
+\usepackage{xpatch}
+\usepackage{sectsty}
 \usepackage{graphicx}
 \usepackage{etoolbox}
 \makeatletter
-%\def\thm@space@setup{%
-%  \thm@preskip=8pt plus 2pt minus 4pt
-%  \thm@postskip=\thm@preskip
-%}
+
+%% Does something
+\def\thm@space@setup{%
+  \thm@preskip=8pt plus 2pt minus 4pt
+  \thm@postskip=\thm@preskip
+}
+
+
+% Works by
+% \xpatchcmd{\foo}{<search>}{<replace>}{<true>}{<false>}
+
 %% Supposed to remove Space at top of Chapters
 % https://tex.stackexchange.com/questions/309920/how-to-move-the-chapter-title-upwards-on-page
-\patchcmd{\@makechapterhead}{\vspace*{10\p@}}{}{}{}% Removes space above \chapter head
-\patchcmd{\@makeschapterhead}{\vspace*{10\p@}}{}{}{}% Removes space above \chapter* head
-%% Supposed to fix LoT and LoF
-% https://latex.org/forum/viewtopic.php?t=32162
-\patchcmd{\@chapter}{\addtocontents{lof}{\protect\addvspace{10\p@}}}{}{}{}% LoF
-\patchcmd{\@chapter}{\addtocontents{lot}{\protect\addvspace{10\p@}}}{}{}{}% LoT
-%% Remove headers?
-\pagestyle{empty} % Only some page numbers?!
+\xpatchcmd{\@makechapterhead}{\vspace*{50\p@}}{}{}{}% Removes space above \chapter head
+\xpatchcmd{\@makeschapterhead}{\vspace*{50\p@}}{}{}{}% Removes space above \chapter* head
+
+% Between Chapter and Chapter Title
+\xpatchcmd{\@makechapterhead}{\vspace*{20\p@}}{}{}{}% Removes space above \chapter head
+\xpatchcmd{\@makeschapterhead}{\vspace*{20\p@}}{}{}{}% Removes space above \chapter* head
+
+% Between Chapter Title and Text
+\xpatchcmd{\@makechapterhead}{\vspace*{40\p@}}{}{}{}% Removes space above \chapter head
+\xpatchcmd{\@makeschapterhead}{\vspace*{40\p@}}{}{}{}% Removes space above \chapter* head
+
+
+%\renewcommand{\@makechapterhead}[1]{%
+%  {\noindent\raggedright\normalfont% Alignment and font reset
+%   \huge\bfseries \@chapapp\space\thechapter~~#1\par\nobreak}% Formatting
+%  \vspace{\baselineskip}% ...just a little space
+%}
+
+
+%\renewcommand{\@makeschapterhead}[1]{%
+%  {\noindent\raggedright\normalfont% Alignment and font reset
+%   \huge\bfseries \@chapapp\space\thechapter~~#1\par\nobreak}% Formatting
+%  \vspace{\baselineskip}% ...just a little space
+%}
+
 \makeatother % remove for lsu
-%\raggedbottom % remove for LSu
+\raggedbottom % remove for LSu
 \frontmatter
+
+\chaptertitlefont{\large}
+\allsectionsfont{\normalsize}
