--- a/document/index.Rmd
+++ b/document/index.Rmd
@@ -1,9 +1,10 @@
 --- 
 date: "`r Sys.Date()`"
-geometry: "left=1.5in, right=1.5in, top=2.5in, bottom=2.5in" # Change Right to 1 in for print
+#geometry: "left=1.5in, right=1.5in, top=2.5in, bottom=2.5in" # Change Right to 1 in for print
+geometry: "left=1in, right=1in, top=1in, bottom=1in"# Experiment
 fontsize: 12pt
-lof: true
-lot: true
+lof: false
+lot: 
 site: bookdown::bookdown_site
 output: bookdown::gitbook
 documentclass: book
@@ -13,6 +14,14 @@ link-citations: yes
 github-repo: davidjohnbaker1/document
 description: "This dissertation models both individual and musical features that contribute to processes involved in melodic dictation."
 ---
+
+\begin{doublespacing}
+\listoffigures
+\end{doublespacing}
+
+\begin{doublespacing}
+\listoftables
+\end{doublespacing}
 
 \cleardoublepage\newpage
 \chapter{Abstract}
