--- a/document/index.Rmd
+++ b/document/index.Rmd
@@ -4,7 +4,7 @@ date: "`r Sys.Date()`"
 geometry: "left=1in, right=1in, top=1in, bottom=1in"# Experiment
 fontsize: 12pt
 lof: false
-lot: 
+lot: false
 site: bookdown::bookdown_site
 output: bookdown::gitbook
 documentclass: book
@@ -15,13 +15,20 @@ github-repo: davidjohnbaker1/document
 description: "This dissertation models both individual and musical features that contribute to processes involved in melodic dictation."
 ---
 
-\begin{doublespacing}
-\listoffigures
-\end{doublespacing}
+\let\bforigdefault\bfdefault
+\addtocontents{toc}{\let\string\bfdefault\string\mddefault}
+
+\addcontentsline{toc}{chapter}{\listtablename}
+\addcontentsline{toc}{chapter}{\listfigurename}
 
 \begin{doublespacing}
 \listoftables
 \end{doublespacing}
+
+\begin{doublespacing}
+\listoffigures
+\end{doublespacing}
+
 
 \cleardoublepage\newpage
 \chapter{Abstract}
@@ -41,6 +48,7 @@ Finally, in my seventh chapter, I introduce a computational, cognitive model of 
 I demonstrate how modeling the cognitive decision process during melodic dictation helps provide a precise framework for pedagogues to understand student’s inner cognition during melodic dictation and can help inform teaching practice. 
 
 \mainmatter 
+\addtocontents{toc}{\let\string\bfdefault\string\bforigdefault}
 
 # Significance of the Study
 
