--- a/document/latex/before_body.tex
+++ b/document/latex/before_body.tex
@@ -76,7 +76,7 @@ Daniel Shanahan, my main supervisor throughout my doctoral work, who provided co
 
 Secondly, I want to thank the entire Louisiana State University community for making me feel welcomed and supported.
 The people make the place and everyone I met during my time in Baton Rouge existed as a constant source of knowledge and inspiration throughout my time as a student.
-This includes the Music Cognition and Computation Lab at LSU, the weekly Tin Roof Trivia group, and professors like Jason Harman  who opened the door for me every time I knocked.
+This includes the Music Cognition and Computation Lab at LSU, the weekly Tin Roof Trivia group, and professors like Jeffrey Perry and Jason Harman who opened the door for me every time I knocked.
 
 Thirdly, I want to especially thank those who either went out of their way to help me learn the more technical aspects of research who often go unacknowledged.
 Craig Sapp, for dealing with me as I learned about Humdrum, Yihui Xie for writing the bookdown software I used to write this dissertation, the \#rstats community, specifically Hadley Wickham, for making R so accessible, and Daniel Müllensiefen for starting me on my journey into programming.
@@ -84,5 +84,5 @@ Without a commitment to free and open source software, this research and dissert
 
 Lastly, I want to thank all of my friends and family.
 Thank you to Will, Rory, Kevin, Amanda, Ryan, Chris, Peter, Jono, Kris, Sarah, Phil (also for the melodies!), Owen, Jacob, Michael, Adam, Mark, Sasha, Lauryn, Connor, Elizabeth, Tanush, Tony, Andrew, Anthony, Savanna, Jared, Matt, Andrew, Erin, Lizbeth, Greg, my parents John and Mary, and especially Evelyn for all your support and love.
-
 \let\cleardoublepage\clearpage
+\newpage
